# algorand

./: README.md
helloWorld/: README.md  helloWorld.code-workspace
helloWorld/projects/helloWorld/: .algokit.toml  .copier-answers.yml  README.md  pyproject.toml
